# collection_cap

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  design.md  errors.txt  errors.utf8.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  docs.yml
src/: capacity.rs  internal.rs  iter.rs  iter_cap_ext.rs  lib.rs  marker.rs
src/cap/: marker.rs  mod.rs  range.rs  static.rs  unbounded.rs  val.rs  variable.rs
src/cap/consts/: check_const.rs  exact_cap_const.rs  max_cap_const.rs  min_cap_const.rs  min_max_cap_const.rs  mod.rs
src/cap/stat/: check_static.rs  exact_cap_stat.rs  max_cap_stat.rs  min_cap_stat.rs  min_max_cap_stat.rs  mod.rs
src/cap/val/: exact_cap_val.rs  max_cap_val.rs  min_cap_val.rs  min_max_cap_val.rs  mod.rs
src/err/: bound.rs  cap.rs  cap_error.rs  compat.rs  ext.rs  fit.rs  fit_error.rs  intersect.rs  mod.rs  overlap.rs  range.rs  target_cap_error.rs  val.rs
src/err/compat/: mod.rs  static.rs  variable.rs
src/impls/: alloc_impl.rs  array.rs  arrayvec.rs  mod.rs  range.rs  slice.rs
tests/: cap_error.rs  capacity.rs  constraint.rs  fit_error.rs  impls.rs  iter_cap_ext.rs  iter_ext.rs  marker.rs  target_cap_error.rs
tests/cap/: macros.rs  main.rs  marker.rs  range.rs  static.rs  unbounded.rs  val.rs  variable.rs
tests/common/: consts.rs  iter.rs  macros.rs  mod.rs
tests/err/: bound.rs  cap.rs  compat.rs  fit.rs  intersect.rs  main.rs  overlap.rs  range.rs  val.rs
tests/impls/: alloc_impl.rs  array.rs  arrayvec.rs  main.rs  range.rs  slice.rs
(+22 files in other folders)
